syntax = "proto3";

package payment;

option go_package = "./payment";

message CreatePaymentReq{
    string OrderSerialNumber = 1;
    int64 PaymentWay = 2;
    string PaymentAmount = 3;
    string TransactionPassword = 4;
}

message CreatePaymentReply{
  string OrderSerialNumber = 1;
  string PaymentSerialNumber = 2;
}

message PaymentNoticeReq{
    string OrderSerialNumber = 1;
    int64 PaymentWay = 2;
    string PaymentAmount = 3;
    string PaymentSerialNumber = 4;
    int64 PaymentTime = 5;
}

message PaymentNoticePayReply{
    string OrderSerialNumber = 1;
    string PaymentSerialNumber = 2;
}

service payment{
    //创建支付单
    rpc createPayment(CreatePaymentReq) returns (CreatePaymentReply);
    //支付结果通知
    rpc orderPaymentNotice(PaymentNoticeReq) returns (PaymentNoticePayReply);
}